<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">请输入统一身份认证号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="contend_Null">"NULL"</string>
    <string name="header_text">统一身份认证号</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="time_table_fragment">日程表</string>
    <string name="exam_fragment">考试安排</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="class_fragment">课程安排</string>
    <string name="header_name">应用列表</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_task">Recent task</string>
    <string name="task">Task</string>
    <string name="all_task">All Task</string>
</resources>