<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <EditText
        android:id="@+id/username"
        android:layout_width="387dp"
        android:layout_height="75dp"
        android:layout_marginTop="164dp"
        android:autofillHints=""
        android:gravity="left"
        android:hint="@string/prompt_email"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/password"
        android:layout_width="384dp"
        android:layout_height="75dp"
        android:layout_marginTop="136dp"
        android:autofillHints=""
        android:gravity="left"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265"
        tools:ignore="RtlHardcoded" />

    <ImageButton
        android:id="@+id/login"
        android:layout_width="331dp"
        android:layout_height="89dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_btn"
        android:contentDescription="@string/contend_Null"
        android:enabled="false"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654" />


    <ImageView
        android:id="@+id/imageView01"
        android:layout_width="79dp"
        android:layout_height="72dp"
        android:contentDescription="@string/contend_Null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053"
        app:srcCompat="@drawable/login_title" />

    <ImageButton
        android:id="@+id/imageButton01"
        android:layout_width="331dp"
        android:layout_height="89dp"
        android:background="@drawable/login_btn02"
        android:contentDescription="@string/contend_Null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856" />

</androidx.constraintlayout.widget.ConstraintLayout>